--- a/src/app/formulario-pedido/formulario-pedido.component.html
+++ b/src/app/formulario-pedido/formulario-pedido.component.html
@@ -1,6 +1,6 @@
 <div class="rounded shadow p-4">
     <h2>Realizar Pedido</h2>
-    <form [formGroup]="orderForm" (submit)="placeOrder()">
+    <form [formGroup]="orderForm" (ngSubmit)="placeOrder()">
         <div class="mb-3">
             <label for="idClient" class="form-label">ID Cliente</label>
             <input type="text" class="form-control" formControlName="idClient" required>
